# graph-sparsification

./: .gitignore  PROGRESS.md  README.md  pyproject.toml  requirements.txt  setup.py
notebooks/: GD-messy-v1.ipynb  GD-messy-v2.ipynb  baseline-vs-HeatK-GD.ipynb  baseline.ipynb  dmp_vs_sir_grid_cm.ipynb  experiments.ipynb  heatK_vs_recursiveIP_grid_cm.ipynb  run_gd_sparsifier_hk.ipynb
playground/gael/: grid_search.ipynb  grid_search_results.json  neumann_exploration.ipynb  neumann_results_diverse5_n1000.json  neumann_results_diverse5_n500.json  run_grid_search.py  test_proximity_neumann.py
scripts/: neumann_pipeline.py
src/cpp/: sir.cpp
src/python/graph_sparsification/: __init__.py  gd_sparsifier_hk.py  generators.py  heat_kernel_GD_example_draft_not_usable.py  heat_kernel_gd.py  neumann_sparsifier.py  sir.py  sparsifiers.py  visualization.py
tests/: test_basic.py
