[build-system]
requires = ["setuptools>=64", "pybind11>=2.11"]
build-backend = "setuptools.build_meta"

[project]
name = "graph_sparsification"
version = "0.1.0"
description = "Graph sparsification research: MBB, EffR, SIR simulations"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "networkx>=3.0",
    "pybind11>=2.11",
]

[project.optional-dependencies]
dev = ["pytest", "jupyter"]
learned = ["torch>=2.0"]

[tool.setuptools.packages.find]
where = ["src/python"]

[tool.pytest.ini_options]
testpaths = ["tests"]
